--- a/css/style.css
+++ b/css/style.css
@@ -138,7 +138,8 @@ body {
 
 /* Герой */
 .hero {
-    background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('../images/hero-bg.jpg') no-repeat center/cover;
+    /* background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('../images/hero-bg.jpg') no-repeat center/cover; */
+    background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('../images/manufacture.jpg') no-repeat center/cover;
     color: var(--text-light);
     padding: 180px 0 100px;
     text-align: center;
